[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-rbg-lora-converter"
version = "1.0.0"
description = "A node for converting LoRA (Low-Rank Adaptation) keys in ComfyUI."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Ramon Guthrie"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "torch",
    "safetensors",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/RamonGuthrie/comfyui-rbg-lora-converter"
"Bug Tracker" = "https://github.com/RamonGuthrie/comfyui-rbg-lora-converter/issues"
"Linkedin" = "https://www.linkedin.com/in/ramonguthrie"